--- a/comida/static/home.css
+++ b/comida/static/home.css
@@ -8,7 +8,7 @@
     
 }
 
-.main::before {
+main::before {
     content: '';
     background-image: url('/static/img/font.jpg');
     background-attachment: fixed;
@@ -25,8 +25,6 @@
 }
 
 .contenido {
-    width: 100%;
-    max-width: 1700px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,7 +114,6 @@
 
 @media (max-width: 900px) {ç
     .main{
-        margin-top: 10px;
         padding-bottom: 10px;
     }
     .contenido {
@@ -127,8 +124,12 @@
 
 @media (max-width: 620px) {
     .imagen {
-        width: 450px;
-        height: 450px;
+        width: 350px;
+        height: 350px;
+        padding: 0;
+    }
+    .cont-ini h2 {
+        font-size: 4rem; 
     }
     
 }
