--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -21,12 +21,13 @@
         </div>
         <nav class="menu">
             {% if not user.is_authenticated %}
-            
-            {% endif %}
             <a href="{% url 'home' %}">Inicio</a>
+            {% endif %}
+            
             <a href="{% url 'nosotros' %}">Nosotros</a>
             <a href="{% url 'servicios' %}">Servicios</a>
             <a href="{% url 'contactenos' %}">Contactenos</a>
+            
             {% if user.is_authenticated %}
                 <a href="{% url 'productos' %}">Productos</a>
         
@@ -35,21 +36,26 @@
 
         <div class="menu-icons">
             {% if user.is_authenticated %}
-            
-                <a id="carrito-icon" class="carrito-icon " href="{% url 'carrito' %}" title="Carrito">
-                    <i class='bx bx-cart'></i>
-                    <span id="cart-counter" class="hidden">0</span>
-                </a>
-                <div class="profile-menu">
-                    <button id="profileBtn" class="profile-btn">
-                        <i class='bx bx-user-circle'></i>
-                    </button>
-                    <div id="profileDropdown" class="profile-dropdown">
-                        <a href="{% url 'perfil' %}">Mi Perfil</a>
-                        <a href="{% url 'logout' %}" onclick="localStorage.removeItem('carrito');">Cerrar sesión</a>
-                        <a href="{% url 'manual' %}">Manual de Usuario</a>
-                    </div>
+            <a id="carrito-icon" class="carrito-icon " href="{% url 'carrito' %}" title="Carrito">
+                <i class='bx bx-cart'></i>
+                <span id="cart-counter" class="hidden">0</span>
+            </a>
+            {% endif %}
+            <div class="profile-menu">
+                <button id="profileBtn" class="profile-btn">
+                    <i class='bx bx-user-circle'></i>
+                </button>
+                <div id="profileDropdown" class="profile-dropdown">
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'perfil' %}">Mi Perfil</a>
+                    <a href="{% url 'logout' %}" onclick="localStorage.removeItem('carrito');">Cerrar sesión</a>
+                    {% endif %}
+                    <a href="{% url 'manual' %}">Manual de Usuario</a>
                 </div>
+            </div>
+            {% if user.is_authenticated %}
+            
+                
             
             {% endif %}
         </div>
