--- a/comida/static/home.css
+++ b/comida/static/home.css
@@ -136,6 +136,7 @@ main::before {
     }
     .cont-ini h2 {
         font-size: 3rem;
+        background-color: brown;
         
         
         
