--- a/comida/templates/nosotros.html
+++ b/comida/templates/nosotros.html
@@ -15,14 +15,14 @@
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Misión</h2>
-                    <p class="about-description">Brindar a nuestros clientes una oferta deliciosa y variada de comidas rápidas, bebidas y granizados, elaborados con ingredientes frescos y locales. Nos comprometemos a ofrecer un servicio amable y eficiente, creando un espacio acogedor que fomente momentos inolvidables y fortalezca el vínculo con nuestra comunidad en El Pital, Huila.</p>
+                    <p class="about-description">Brindar a nuestros clientes una oferta deliciosa variada en comidas rápidas, bebidas y granizados, elaborados con ingredientes frescos y locales. Nos comprometemos a ofrecer un excelente servicio, creando un espacio acogedor que fomente momentos inolvidables que fortalezcan el vínculo con nuestra comunidad en El Pital-Huila.</p>
                 </div>
             </div>
 
             <div class="about-item">
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Visión</h2>
-                    <p class="about-description">Ser el restaurante líder en comidas rápidas, bebidas y granizados en El Municipio del Pital, Huila, reconocido por ofrecer experiencias únicas a nuestros clientes a través de sabores innovadores, calidad excepcional y un servicio cálido, contribuyendo al desarrollo gastronómico y turístico de nuestra región.</p>
+                    <p class="about-description">Ser el restaurante líder en comidas rápidas, bebidas y granizados en El Municipio del Pital-Huila, reconocido por ofrecer experiencias únicas a nuestros clientes a través de sabores innovadores, calidad excepcional, un servicio cálido, contribuyendo al desarrollo gastronómico y turístico de nuestra región.</p>
                 </div>
                 <div class="about-overlay">
                     <img src="{% static 'img/vision.jpg' %}" alt="Historia del restaurante" class="about-image">
@@ -38,14 +38,14 @@
                 <div class="about-content">
                     <h2 class="about-title">Nuestro Local</h2>
                     <p class="about-description">
-                        En Chok Dog hemos diseñado nuestro local para que sea un lugar para disfrutar más allá de solo comer; Un ambiente donde cada detalle ha sido pensado para ofrecer Un espacio acogedor, elegante, para crear la atmósfera perfecta y disfrutar de una experiencia gastronómica única.<p>
+                        En Chok Dog hemos diseñado nuestro local para que sea un lugar donde disfrutar más allá de solo comer; Un ambiente en elque  cada detalle ha sido pensado para ofrecer Un espacio acogedor y elegante, para crear la atmósfera perfecta donde podras disfrutar de una experiencia gastronómica única.<p>
                 </div>
             </div>
 
             <div class="about-item">
                 <div class="about-content">
                     <h2 class="about-title">Equipo de Trabajo</h2>
-                    <p class="about-description">Detrás de cada plato en Chok Dog hay un equipo comprometido con la excelencia, apasionado y profesional dedicado a crear experiencias memorables para nuestros clientes en cada visita.</p>
+                    <p class="about-description">Detrás de cada plato en Chok Dog hay un equipo comprometido con la excelencia, apasionado y profesional, dedicado a crear experiencias memorables para nuestros clientes en cada visita.</p>
                 </div>
                 <div class="about-overlay">
                     <img src="{% static 'img/equipo.jpg' %}" alt="Nuestro equipo" class="about-image">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Puerta está abierta</h2>
-                    <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia gastronomica excepcional, nos ubicamos en la calle 6 #9-10 en el Municipio del pital-Huila, te esperamos</p>
+                    <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia gastronómica excepcional, nos ubicamos en la calle 6 #9-10 en el Municipio del pital-Huila, ¡te esperamos!</p>
                 </div>
             </div>
 
