--- a/comida/static/pago.css
+++ b/comida/static/pago.css
@@ -7,7 +7,9 @@ main {
     min-height: 100vh;
     padding:10px 0 70px 0;
 }
-
+.tit{
+    padding: 20px 0;
+}
 .tit h2{
     text-align: center;
     margin: 20px;
@@ -20,6 +22,7 @@ main {
     display: flex;
     justify-content: center;
 }
+
 
 
 .payment-container {
