--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -21,18 +21,18 @@
         </div>
         <nav class="menu">
             {% if not user.is_authenticated %}
-            <a href="{% url 'home' %}">Inicio</a>
+                <a href="{% url 'home' %}" class="{% if request.path == '/' %}active{% endif %}">Inicio</a>
             {% endif %}
             
-            <a href="{% url 'nosotros' %}">Nosotros</a>
-            <a href="{% url 'servicios' %}">Servicios</a>
-            <a href="{% url 'contactenos' %}">Contactenos</a>
-            
-            {% if user.is_authenticated %}
-                <a href="{% url 'productos' %}">Productos</a>
+            <a href="{% url 'nosotros' %}" class="{% if request.path|slice:":9" == "/nosotros" %}active{% endif %}">Nosotros</a>
+            <a href="{% url 'servicios' %}" class="{% if request.path|slice:":10" == "/servicios" %}active{% endif %}">Servicios</a>
+            <a href="{% url 'contactenos' %}" class="{% if '/contactenos' in request.path %}active{% endif %}">Contáctenos</a>
         
+            {% if user.is_authenticated %}
+                <a href="{% url 'productos' %}" class="{% if request.path|slice:":10" == "/productos" %}active{% endif %}">Productos</a>
             {% endif %}
         </nav>
+        
 
         <div class="menu-icons">
             {% if user.is_authenticated %}
