--- a/comida/templates/pago.html
+++ b/comida/templates/pago.html
@@ -32,10 +32,19 @@
             <form id="payment-form" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
-                <input type="email" id="email" name="email" placeholder="Correo Electrónico" required>
-                <input type="tel" id="telefono" name="telefono" placeholder="Teléfono" required>
-                <input type="text" id="direccion" name="direccion" placeholder="Dirección"required>
+                <input type="text" id="nombre" name="nombre" placeholder="Nombre"
+                    value="{% if request.user.is_authenticated %}{{ request.user.first_name }} {{ user.last_name }}{% endif %}" required>
+
+                <input type="email" id="email" name="email" placeholder="Correo Electrónico" 
+                    value="{% if request.user.is_authenticated %}{{ request.user.email }}{% endif %}" required>
+
+                <input type="tel" id="telefono" name="telefono" placeholder="Teléfono" 
+                    value="{% if request.user.is_authenticated %}{{ user.profile.phone_number|default:'' }}{% endif %}" required>
+                    
+
+                <input type="text" id="direccion" name="direccion" placeholder="Dirección" 
+                    value="{% if request.user.is_authenticated  %}{{ user.profile.address|default:'' }}{% endif %}" required>
+
                 
                 
                 <label class="qrl">
@@ -45,9 +54,17 @@
                     <input type="radio" name="metodo_pago" value="daviplata" required> Daviplata
                 </label>
                 <div class="qr" id="qr-container">
-                    <img class="neq" id="qr-nequi" src="{% static 'img/mision.jpg' %}" alt="QR Nequi" style="display: none;">
-                    <img class="dav" id="qr-daviplata" src="{% static 'img/c_2.jpg' %}" alt="QR Daviplata" style="display: none;">
+                    <div id="nequi-container" style="display: none;">
+                        <img class="neq" id="qr-nequi" src="{% static 'img/mision.jpg' %}" alt="QR Nequi">
+                        <p>Numero de Nequi: <span>3126186801</span></p>
+                    </div>
+                    
+                    <div id="daviplata-container" style="display: none;">
+                        <img class="dav" id="qr-daviplata" src="{% static 'img/c_2.jpg' %}" alt="QR Daviplata">
+                        <p>Numero de DaviPlata: <span>3126186801</span></p>
+                    </div>
                 </div>
+                
                 <h4>👇Ingresar el comprobante de pago👇</h4>
                 <input type="file" id="comprobante" name="comprobante" accept="image/*" required>
                 
