--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -14,7 +14,7 @@
     </div>
     
     <div class="hero-img">
-        <img src="{% static 'img/cok_2.jpg' %}" alt="Plato de comida">
+        <img src="{% static 'img/pag.jpg' %}" alt="Plato de comida">
     </div>
 </header>
 
