--- a/comida/templates/pago.html
+++ b/comida/templates/pago.html
@@ -55,12 +55,12 @@
                 </label>
                 <div class="qr" id="qr-container">
                     <div id="nequi-container" style="display: none;">
-                        <img class="neq" id="qr-nequi" src="{% static 'img/mision.jpg' %}" alt="QR Nequi">
+                        <img class="neq" id="qr-nequi" src="{% static 'img/qr.jpg' %}" alt="QR Nequi">
                         <p>Numero de Nequi: <span>3126186801</span></p>
                     </div>
                     
                     <div id="daviplata-container" style="display: none;">
-                        <img class="dav" id="qr-daviplata" src="{% static 'img/c_2.jpg' %}" alt="QR Daviplata">
+                        <img class="dav" id="qr-daviplata" src="{% static 'img/qr.jpg' %}" alt="QR Daviplata">
                         <p>Numero de DaviPlata: <span>3126186801</span></p>
                     </div>
                 </div>
