--- a/comida/static/pagina.css
+++ b/comida/static/pagina.css
@@ -120,6 +120,15 @@
 @media (max-width: 550px) {
     .hero img{
         width: 400px;
-        height: 500px;
+        height: 300px;
+    }
+    .hero-content h2 {
+        margin: 40px 0;
+        color: var(--dorado);
+    }
+    .hero-content h1 {
+        font-size: 2rem;
+        color: var(--blanco);
+        margin: 30px 0;
     }
 }
