--- a/comida/templates/contactenos.html
+++ b/comida/templates/contactenos.html
@@ -20,13 +20,16 @@
             <form method="POST" action="{% url 'contactenos' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" placeholder="Nombre Completo" id="nombre" name="nombre" required>
+                    <input type="text" placeholder="Nombre Completo" id="nombre" name="nombre" 
+                    value="{% if request.user.is_authenticated %}{{ request.user.first_name }} {{ user.last_name }}{% endif %}" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" placeholder="Correo" id="correo" name="correo" required>
+                    <input type="email" placeholder="Correo" id="correo" name="correo"
+                    value="{% if request.user.is_authenticated %}{{ request.user.email }}{% endif %}" required>
                 </div>
                 <div class="form-group">
-                    <input type="tel" placeholder="Telefono" id="telefono" name="telefono" required>
+                    <input type="tel" placeholder="Telefono" id="telefono" name="telefono"
+                    value="{% if request.user.is_authenticated %}{{ user.profile.phone_number|default:'' }}{% endif %}" required>
                 </div>
                 <div class="form-group">
                     <label for="mensaje">Mensaje</label>
