--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -7,7 +7,7 @@
 <header class="hero">
     <div class="hero-content">
         
-        <h1><span class="resaltado"> ¡Hola {{ user.first_name}} {{ user.last_name }},<br> Bienvenido a </span> Chok Dog!</h1>
+        <h1><span class="resaltado"> ¡Hola {{ user.first_name}} {{ user.last_name }}!<br> Bienvenido a </span> Chok Dog!</h1>
         <h2>🌟 Descubre la magia de nuestros sabores 🌟</h2>
         <p>Ven por una experiencia culinaria diseñada para deleitar tus sentidos. Cada plato es preparado con los ingredientes más frescos y con un toque especial que te hará regresar por más.
         </p>
