--- a/comida/static/pagina.css
+++ b/comida/static/pagina.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5rem 10%;
+    padding: 5rem 15%;
     background-color: var(--gris-industrial);
     position: relative;
 }
@@ -119,7 +119,7 @@
 
 @media (max-width: 550px) {
     .hero img{
-        width: 400px;
+        width: 350px;
         height: 300px;
     }
     .hero-content h2 {
@@ -130,5 +130,11 @@
         font-size: 2rem;
         color: var(--blanco);
         margin: 30px 0;
+    }
+    .menu-of {
+        padding-bottom: 100px;
+    }
+    .menu-item img{
+        height: 250px;
     }
 }
