--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -47,8 +47,11 @@
                 </button>
                 <div id="profileDropdown" class="profile-dropdown">
                     {% if user.is_authenticated %}
-                    <a href="{% url 'perfil' %}">Mi Perfil</a>
-                    <a href="{% url 'logout' %}" onclick="localStorage.removeItem('carrito');">Cerrar sesión</a>
+                        <a href="{% url 'perfil' %}">Mi Perfil</a>
+                        <a href="{% url 'historial' %}">Historial</a>
+                        <a href="{% url 'logout' %}" onclick="localStorage.removeItem('carrito');">Cerrar sesión</a>
+                    {% else %}
+                        <a href="{% url 'iniciar' %}">Iniciar Sesión</a>
                     {% endif %}
                     <a href="{% url 'manual' %}">Manual de Usuario</a>
                 </div>
